# cppTextAnalyzer-

./: .gitignore  CMakeLists.txt  LocalTxtListRetriever.cpp  README.md  TxtSourceRetriever.cpp  TxtSourceRetriever.h  Utility.cpp  Utility.h  conanfile.txt  main.cpp  sourceList.txt
src/: BstBuilder.cpp  BstBuilder.hpp  BstClientBuilder.cpp  BstClientBuilder.hpp  BstNode.cpp  BstNode.hpp  LocalTxtListRetriever.cpp  LocalTxtListRetriever.hpp  TextIndexManipulator.cpp  TextIndexManipulator.hpp  TxtSelectionInteractor.cpp  TxtSelectionInteractor.hpp  TxtSourceRetriever.cpp  TxtSourceRetriever.hpp  main.cpp  textItem.hpp
